infrastructure/03-traefik/base/networking/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-local
  namespace: traefik
spec:
  loadBalancerIP: 192.168.178.102
  type: LoadBalancer
  selector:
    app: traefik
  ports:
  # Local
  - name: web
    port: 80
    protocol: TCP
    targetPort: web-local
  - name: websecure
    port: 443
    protocol: TCP
    targetPort: websecure-local
  - name: dns
    port: 53
    protocol: UDP
    targetPort: 53
  - name: traefik
    port: 9000
    protocol: TCP
    targetPort: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-front
  namespace: traefik
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
  # Front
  - name: web
    port: 80
    protocol: TCP
    targetPort: web-front
    nodePort: 30080
  - name: websecure
    port: 443
    protocol: TCP
    targetPort: websecure-front
    nodePort: 30443
  - name: dns
    port: 53
    protocol: UDP
    targetPort: dns
    nodePort: 30053
