infrastructure/03-traefik/base/networking/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure-local
  routes:
  - match: Host(`traefik.steffenillium.de`)
    kind: Rule
    tls: {}
    services:
    - name: api@internal
      kind: TraefikService
