infrastructure/03-traefik/base/networking/traefik-ingressroute-traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    expose: false
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - kind: Rule
    match: Host(`tr.steffenillium.de`)
    services:
    - kind: TraefikService
      name: api@internal
